some bug fix